# ZTTM

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  network_sniffer.rs
src/core/: file_scanner.rs  mitre_mapper.rs  mod.rs  process_scanner.rs  startup_detector.rs
